[Done] Document users API
